//go:build integration

package integration

import (
	"context"
	"testing"

	inventoryV1 "github.com/Daniil-Sakharov/RocketFactory/shared/pkg/proto/inventory/v1"
	. "github.com/onsi/ginkgo/v2"
	. "github.com/onsi/gomega"
)

func TestStandaloneIntegration(t *testing.T) {
	RegisterFailHandler(Fail)
	RunSpecs(t, "Inventory Service Standalone Integration Test Suite")
}

var _ = Describe("InventoryService Standalone Tests", func() {
	var (
		ctx context.Context
	)

	BeforeEach(func() {
		ctx = context.Background()
		_ = ctx // Используем переменную чтобы избежать ошибки компиляции
	})

	Describe("Standalone ListParts", func() {
		It("должен возвращать пустой список деталей в standalone тесте", func() {
			// Standalone тест без реального подключения к базе данных
			parts := []*inventoryV1.Part{}
			
			Expect(parts).To(BeEmpty(), "список деталей должен быть пустым в standalone тесте")
		})
	})

	Describe("Standalone GetPart", func() {
		It("должен возвращать ошибку для несуществующей детали в standalone тесте", func() {
			// Standalone тест без реального подключения к базе данных
			partUUID := "non-existent-uuid"
			
			Expect(partUUID).To(Equal("non-existent-uuid"))
			// В реальном тесте здесь была бы проверка ошибки от gRPC клиента
		})
	})

	Describe("Standalone Data Validation", func() {
		It("должен валидировать структуру данных детали", func() {
			// Создаем тестовую деталь для валидации структуры
			part := &inventoryV1.Part{
				Uuid:          "test-uuid-123",
				Name:          "Тестовая деталь",
				Description:   "Описание тестовой детали",
				Price:         1000.0,
				StockQuantity: 10,
				Category:      inventoryV1.Category_CATEGORY_ENGINE,
			}

			Expect(part.Uuid).To(Equal("test-uuid-123"))
			Expect(part.Name).To(Equal("Тестовая деталь"))
			Expect(part.Description).To(Equal("Описание тестовой детали"))
			Expect(part.Price).To(Equal(1000.0))
			Expect(part.StockQuantity).To(Equal(int64(10)))
			Expect(part.Category).To(Equal(inventoryV1.Category_CATEGORY_ENGINE))
		})
	})

	Describe("Standalone Filter Tests", func() {
		It("должен корректно работать с фильтрами", func() {
			// Тестируем создание фильтров
			filter := &inventoryV1.PartsFilter{
				Uuids:      []string{"uuid1", "uuid2"},
				Categories: []inventoryV1.Category{inventoryV1.Category_CATEGORY_ENGINE},
			}

			Expect(filter.Uuids).To(HaveLen(2))
			Expect(filter.Uuids[0]).To(Equal("uuid1"))
			Expect(filter.Uuids[1]).To(Equal("uuid2"))
			Expect(filter.Categories).To(HaveLen(1))
			Expect(filter.Categories[0]).To(Equal(inventoryV1.Category_CATEGORY_ENGINE))
		})
	})

	Describe("Standalone Business Logic Tests", func() {
		It("должен корректно обрабатывать бизнес-логику", func() {
			// Тестируем бизнес-логику без внешних зависимостей
			price := 1000.0
			quantity := int64(10)
			totalValue := price * float64(quantity)

			Expect(totalValue).To(Equal(10000.0))
		})

		It("должен корректно валидировать категории", func() {
			// Тестируем валидацию категорий
			validCategories := []inventoryV1.Category{
				inventoryV1.Category_CATEGORY_ENGINE,
				inventoryV1.Category_CATEGORY_FUEL,
				inventoryV1.Category_CATEGORY_PORTHOLE,
				inventoryV1.Category_CATEGORY_WING,
			}

			Expect(validCategories).To(HaveLen(4))
			Expect(validCategories).To(ContainElement(inventoryV1.Category_CATEGORY_ENGINE))
			Expect(validCategories).To(ContainElement(inventoryV1.Category_CATEGORY_FUEL))
		})
	})
})